--- a/GcStatistics.Sys/GcStatistics.Sys.csproj
+++ b/GcStatistics.Sys/GcStatistics.Sys.csproj
@@ -243,6 +243,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Report\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
