--- a/GcStatistics.Sys/GcStatistics.Sys.csproj
+++ b/GcStatistics.Sys/GcStatistics.Sys.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Common\SearchKeyword.cs" />
     <Compile Include="Controllers\StatisticalController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
